Analizador_sintactico/src/analizador/JavaScriptParser.java
/* JavaScriptParser.java */
/* Generated By:JavaCC: Do not edit this line. JavaScriptParser.java */
/** Analizador de un subconjunto del lenguaje JavaScript. */
package analizador;

public class JavaScriptParser implements JavaScriptParserConstants {

/** Reglas de producción */
  final public void Program() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      Statement();
    }
    jj_consume_token(0);
}

  final public void Statement() throws ParseException {
    if (jj_2_2(2)) {
      VariableStatement();
    } else if (jj_2_3(2)) {
      IfStatement();
    } else if (jj_2_4(2)) {
      WhileStatement();
    } else if (jj_2_5(2)) {
      ForStatement();
    } else if (jj_2_6(2)) {
      ReturnStatement();
    } else if (jj_2_7(2)) {
      ExpressionStatement();
    } else if (jj_2_8(2)) {
      FunctionStatement();
    } else if (jj_2_9(2)) {
      ConsoleStatement();
    } else if (jj_2_10(2)) {
      SwitchStatement();
    } else if (jj_2_11(2)) {
      BreakStatement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void VariableStatement() throws ParseException {
    if (jj_2_12(2)) {
      jj_consume_token(VAR);
    } else if (jj_2_13(2)) {
      jj_consume_token(LET);
    } else if (jj_2_14(2)) {
      jj_consume_token(CONST);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(IDENTIFICADOR);
    if (jj_2_17(2)) {
      jj_consume_token(IGUAL);
      if (jj_2_15(2)) {
        LlamarFuncion();
      } else if (jj_2_16(2)) {
        DatosCompletos();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    jj_consume_token(PUNTO_Y_COMA);
}

//Debo considerar el hecho de que, se puedan declarar varias funciones en un solo método,


//Un metodo que devuelve una "funcion" únicamente para guardarlo en una variable
  final public void LlamarFuncion() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PARENTESIS_I);
    ParameterList();
    jj_consume_token(PARENTESIS_D);
}

//Pa que chambee el console.log
  final public void ConsoleStatement() throws ParseException {
    jj_consume_token(CONSOLE);
    jj_consume_token(PUNTO);
    jj_consume_token(LOG);
    jj_consume_token(PARENTESIS_I);
    Contenido();
    jj_consume_token(PARENTESIS_D);
    jj_consume_token(PUNTO_Y_COMA);
}

  final public void FunctionStatement() throws ParseException {
    jj_consume_token(FUNCTION);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PARENTESIS_I);
    if (jj_2_18(2)) {
      ParameterList();
    } else {
      ;
    }
    jj_consume_token(PARENTESIS_D);
    Bloque();
}

  final public void ParameterList() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    label_2:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(COMA);
      jj_consume_token(IDENTIFICADOR);
    }
}

  final public void Bloque() throws ParseException {
    jj_consume_token(LLAVE_IZQ);
    label_3:
    while (true) {
      if (jj_2_20(2)) {
        ;
      } else {
        break label_3;
      }
      Statement();
    }
    jj_consume_token(LLAVE_DER);
}

  final public void IfStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(PARENTESIS_I);
    Expression();
    jj_consume_token(PARENTESIS_D);
    Bloque();
    if (jj_2_23(2)) {
      jj_consume_token(ELSE);
      if (jj_2_21(2)) {
        Bloque();
      } else if (jj_2_22(2)) {
        IfStatement();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
}

  final public void WhileStatement() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(PARENTESIS_I);
    Expression();
    jj_consume_token(PARENTESIS_D);
    Bloque();
}

  final public void ForStatement() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(PARENTESIS_I);
    if (jj_2_25(2)) {
      VariableStatement();
    } else if (jj_2_26(2)) {
      if (jj_2_24(2)) {
        Expression();
      } else {
        ;
      }
      jj_consume_token(PUNTO_Y_COMA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_27(2)) {
      Expression();
    } else {
      ;
    }
    jj_consume_token(PUNTO_Y_COMA);
    if (jj_2_28(2)) {
      Expression();
    } else {
      ;
    }
    jj_consume_token(PARENTESIS_D);
    Bloque();
}

  final public void SwitchStatement() throws ParseException {
    jj_consume_token(SWITCH);
    jj_consume_token(PARENTESIS_I);
    Expression();
    jj_consume_token(PARENTESIS_D);
    jj_consume_token(LLAVE_IZQ);
    label_4:
    while (true) {
      if (jj_2_29(2)) {
        ;
      } else {
        break label_4;
      }
      CaseClause();
    }
    if (jj_2_30(2)) {
      DefaultClause();
    } else {
      ;
    }
    jj_consume_token(LLAVE_DER);
}

  final public void CaseClause() throws ParseException {
    jj_consume_token(CASE);
    Expression();
    jj_consume_token(DOS_PUNTOS);
    label_5:
    while (true) {
      if (jj_2_31(2)) {
        ;
      } else {
        break label_5;
      }
      Statement();
    }
    if (jj_2_32(2)) {
      BreakStatement();
    } else {
      ;
    }
}

  final public void DefaultClause() throws ParseException {
    jj_consume_token(DEFAUL);
    jj_consume_token(DOS_PUNTOS);
    label_6:
    while (true) {
      if (jj_2_33(2)) {
        ;
      } else {
        break label_6;
      }
      Statement();
    }
    if (jj_2_34(2)) {
      BreakStatement();
    } else {
      ;
    }
}

  final public void BreakStatement() throws ParseException {
    jj_consume_token(BREAK);
    jj_consume_token(PUNTO_Y_COMA);
}

  final public void ReturnStatement() throws ParseException {
    jj_consume_token(RETURN);
    if (jj_2_35(2)) {
      Expression();
    } else {
      ;
    }
    jj_consume_token(PUNTO_Y_COMA);
}

//El contenido del console.log
  final public void Contenido() throws ParseException {
    label_7:
    while (true) {
      if (jj_2_36(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_37(2)) {
        DatosBasicos();
      } else if (jj_2_38(2)) {
        Concatenation();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  final public void Concatenation() throws ParseException {
    if (jj_2_39(2)) {
      jj_consume_token(COMA);
      DatosBasicos();
    } else if (jj_2_40(2)) {
      jj_consume_token(MAS);
      DatosBasicos();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ExpressionStatement() throws ParseException {
    Expression();
    jj_consume_token(PUNTO_Y_COMA);
}

  final public void Expression() throws ParseException {
    AssignmentExpression();
}

  final public void AssignmentExpression() throws ParseException {
    ConditionalExpression();
    if (jj_2_41(2)) {
      jj_consume_token(IGUAL);
      AssignmentExpression();
    } else {
      ;
    }
}

  final public void ConditionalExpression() throws ParseException {
    OrExpression();
}

  final public void OrExpression() throws ParseException {
    AndExpression();
    label_8:
    while (true) {
      if (jj_2_42(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(OR_LOGICO);
      AndExpression();
    }
}

  final public void AndExpression() throws ParseException {
    EqualityExpression();
    label_9:
    while (true) {
      if (jj_2_43(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(AND_LOGICO);
      EqualityExpression();
    }
}

  final public void EqualityExpression() throws ParseException {
    RelationalExpression();
    label_10:
    while (true) {
      if (jj_2_44(2)) {
        ;
      } else {
        break label_10;
      }
      if (jj_2_45(2)) {
        jj_consume_token(ES_IGUAL);
      } else if (jj_2_46(2)) {
        jj_consume_token(NO_ES_IGUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      RelationalExpression();
    }
}

  final public void RelationalExpression() throws ParseException {
    AdditiveExpression();
    label_11:
    while (true) {
      if (jj_2_47(2)) {
        ;
      } else {
        break label_11;
      }
      if (jj_2_48(2)) {
        jj_consume_token(MENOR);
      } else if (jj_2_49(2)) {
        jj_consume_token(MAYOR);
      } else if (jj_2_50(2)) {
        jj_consume_token(MENOR_IGUAL_QUE);
      } else if (jj_2_51(2)) {
        jj_consume_token(MAYOR_IGUAL_QUE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      AdditiveExpression();
    }
}

  final public void AdditiveExpression() throws ParseException {
    MultiplicativeExpression();
    label_12:
    while (true) {
      if (jj_2_52(2)) {
        ;
      } else {
        break label_12;
      }
      if (jj_2_53(2)) {
        jj_consume_token(MAS);
      } else if (jj_2_54(2)) {
        jj_consume_token(MENOS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      MultiplicativeExpression();
    }
}

  final public void MultiplicativeExpression() throws ParseException {
    UnaryExpression();
    label_13:
    while (true) {
      if (jj_2_55(2)) {
        ;
      } else {
        break label_13;
      }
      if (jj_2_56(2)) {
        jj_consume_token(MULT);
      } else if (jj_2_57(2)) {
        jj_consume_token(DIV);
      } else if (jj_2_58(2)) {
        jj_consume_token(MOD);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      UnaryExpression();
    }
}

  final public void UnaryExpression() throws ParseException {
    if (jj_2_59(2)) {
      jj_consume_token(MAS);
      UnaryExpression();
    } else if (jj_2_60(2)) {
      jj_consume_token(MENOS);
      UnaryExpression();
    } else if (jj_2_61(2)) {
      IncrementDecrementExpression();
    } else if (jj_2_62(2)) {
      PrimaryExpression();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void IncrementDecrementExpression() throws ParseException {
    if (jj_2_65(2)) {
      if (jj_2_63(2)) {
        jj_consume_token(INCREMENTO);
      } else if (jj_2_64(2)) {
        jj_consume_token(DECREMENTO);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    PrimaryExpression();
    if (jj_2_68(2)) {
      if (jj_2_66(2)) {
        jj_consume_token(INCREMENTO);
      } else if (jj_2_67(2)) {
        jj_consume_token(DECREMENTO);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
}

  final public void PrimaryExpression() throws ParseException {
    if (jj_2_69(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else if (jj_2_70(2)) {
      jj_consume_token(INT);
    } else if (jj_2_71(2)) {
      jj_consume_token(FLOAT);
    } else if (jj_2_72(2)) {
      jj_consume_token(STRING);
    } else if (jj_2_73(2)) {
      jj_consume_token(PARENTESIS_I);
      Expression();
      jj_consume_token(PARENTESIS_D);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void DatosCompletos() throws ParseException {
    if (jj_2_74(2)) {
      DatosBasicos();
    } else if (jj_2_75(2)) {
      jj_consume_token(TRUE);
    } else if (jj_2_76(2)) {
      jj_consume_token(FALSE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void DatosBasicos() throws ParseException {
    if (jj_2_77(2)) {
      jj_consume_token(INT);
    } else if (jj_2_78(2)) {
      jj_consume_token(IDENTIFICADOR);
    } else if (jj_2_79(2)) {
      jj_consume_token(FLOAT);
    } else if (jj_2_80(2)) {
      jj_consume_token(STRING);
    } else if (jj_2_81(2)) {
      jj_consume_token(NULL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_36()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_37()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }
